<resources>
    <string name="app_name">TrackProgress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_text">Do not have an account? Click here to sign up</string>
    <string name="btnLogin">LogIn</string>
    <string name="btnSignUp">SignUp</string>
    <string name="SharedPref">Shared_Pref</string>
    <string name="Cred_Pref">SignInSharedPref</string>
    <string name="Cred_ID">UserNameSharedPref</string>
    <string name="User_Type">UserType</string>
    <string name="admin">ADMIN</string>
    <string name="employee">EMPLOYEE</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="change_password">Change Password</string>
    <string name="User_ID">user_id</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
</resources>